# perfector

./: Cargo.toml  README.md  build.rs  shell.nix
.github/workflows/: ci.yml
occt/: CMakeLists.txt
src/: brep.rs  lib.rs  math.rs
src/brep/: compound.rs  compsolid.rs  edge.rs  face.rs  ops.rs  shape.rs  shell.rs  solid.rs  vertex.rs  wire.rs
src/math/: angle.rs  transformation.rs
